# python_series

./: README.md  pyproject.toml
1.httpx/: app.py  app_async.py  constants.py
2.psutil/: app.py  simple.py
3.pillow/: README.md  app.py
4.python_datatypes/: README.md  app.py
4.python_datatypes/dtypes/: bool_.py  byte_.py  classes_.py  complex_.py  decimal_.py  ellipsis_.py  float_.py  fraction_.py  int_.py  none_.py  str_.py
5.python_structural_datatypes/: README.md  app.py
5.python_structural_datatypes/dtypes/: dict_.py  list_.py  perf.py  set_.py  tuple_.py
6.arcade/: README.md  app.py
6.arcade/src/: constants.py  game.py  sprite.py
6.arcade/src/level/: forest.py  level.py
7.python_functions/: 2.fn.py  3.fn.py  5.fn.py  6.fn.py  7.fn.py  8.fn.py  README.md
7.python_functions/p1/: 1.fn.py  2.fn.py  4.fn.py
7.python_functions/p2/: 1.lambdas.py  2.closures.py  3.decorators.py  4.partials.py
functional_programming/tail_call_optmization/: app.js  app.py  tco.py
functional_programming/transducers/: reduce.py  transducer.py  transducer2.py
ml101/1.linear_regression/: README.md  main.py
ml101/2.logistic_regression/: README.md  example2.py  example3.py  logit.py  main.py
ml101/3.k_nearest_neighbors/: README.md  app.py  knn.py  mplot.py
