[tool.poetry]
name = "python-series"
version = "0.0.1"
description = "A exploration of python libraries"
authors = ["Rodolfo De Nadai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.25.0"
numba = "^0.58.0"
psutil = "^5.9.5"
netifaces = "^0.11.0"
pillow = "^10.1.0"
pyside6 = "^6.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"
pylint = "^3.0.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
